--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
