--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
     "chartjs-adapter-moment": "^1.0.1",
@@ -18,9 +19,11 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
