--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "firebase": "^9.17.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
