--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.17.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
